To fix the autocompleter overlaping issue.
SVN-Revision: 3015

--- a/projects/web/src/main/webapp/css/fields.css
+++ b/projects/web/src/main/webapp/css/fields.css
@@ -24,6 +24,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
     Styles for scriptaculous-generated autocompleters
  */
 div.autocomplete {
+	z-index: 3; /* To handle the overlapping issue*/
     position: absolute;
     background-color: white;
     border: 1px solid #888;
